@@ -4,6 +4,8 @@
 
 --------------------------------------------------------------------------
   v.3.4-Beta2 
+	- Fixed problem where democratic play wouldn't send to localplay
+		and would just display a blank screen
 	- Added Multi-Character Filter on browse pages
 	- Fixed Flag Management Interface
 	- Added Export Catalog to CSV
